# praca-magisterska

./: README  README.md  get_image_urls.py  image_data.json  image_urls.json  requirements.txt
.github/workflows/: ci-10.yml  ci.yml
react/: index.html  package-lock.json  package.json  tailwind.config.js
react/public/: image_data.json
react/src/: App.tsx  Banner.tsx  Card.tsx  Footer.tsx  Gallery.tsx  main.tsx
rust/: .gitignore  Cargo.toml  README.md  build_and_serve.sh  index.html  tailwind.config.js  tailwind_info.md
rust/public/: image_data.json
rust/rust-converter/: LICENSE-MIT
rust/src/: banner.rs  card.rs  footer.rs  gallery.rs  main.rs
rust/static/: image_data.json  image_urls.json
rust/styles/: main.css
solid/: bun.lockb  index.html  package.json
solid/public/: image_data.json
solid/src/: App.tsx  Banner.tsx  Card.tsx  Footer.tsx  Gallery.tsx  index.tsx
solid/src/styles/: main.css
