[package]
name = "rust-image-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
serde = "1.0"
reqwasm = "0.2"
anyhow = "1.0"
log = "0.4"
wasm-bindgen = "0.2.92"
tailwind-yew = "0.1.5"
wasm-bindgen-futures = "0.4.42"
web-sys = "0.3.69"
serde-wasm-bindgen = "=0.1.0"
