[package]
name = "rust-image-viewer"
version = "0.1.0"
edition = "2021"

[dependencies]
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
reqwasm = "0.2"
anyhow = "1.0"
log = "0.4"
wasm-bindgen = "0.2.92"
tailwind-yew = "0.1.5"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
wasm-logger = "0.2.0"
web-sys = "0.3.69"
serde_json = "1.0.114"
