[package]
name = "rust-image-viewer"
version = "1.0.0"
edition = "2021"

[dependencies]
yew = { version = "0.21", git = "https://github.com/yewstack/yew/", features = ["csr"] }
wasm-bindgen = "0.2.92"
tailwind-yew = "0.1.5"
gloo-net = "0.2"
serde = { version = "1.0", features = ["derive"] }
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3.69", features = ["Element", "ScrollIntoViewOptions"] }
serde_json = "1.0.114"